@@ -1,39 +1,43 @@
 // SPDX-License-Identifier: AGPL-3.0-or-later
 package eu.albina.controller;
 
+import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.time.Instant;
 import java.time.ZoneId;
+import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
+import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.stream.Collectors;
 
-import org.hibernate.Hibernate;
-import org.hibernate.HibernateException;
-import org.hibernate.proxy.HibernateProxy;
+import eu.albina.util.JsonUtil;
+import io.micronaut.data.annotation.Join;
+import io.micronaut.data.annotation.Repository;
+import io.micronaut.data.repository.CrudRepository;
+import io.micronaut.serde.ObjectMapper;
+import jakarta.inject.Inject;
+import jakarta.inject.Singleton;
+import jakarta.transaction.Transactional;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import com.google.common.base.Strings;
 
 import eu.albina.exception.AlbinaException;
 import eu.albina.model.AbstractPersistentObject;
 import eu.albina.model.AvalancheBulletin;
 import eu.albina.model.AvalancheReport;
-import eu.albina.model.BulletinUpdate;
 import eu.albina.model.Region;
 import eu.albina.model.User;
 import eu.albina.model.enumerations.BulletinStatus;
-import eu.albina.rest.websocket.AvalancheBulletinUpdateEndpoint;
 import eu.albina.util.AlbinaUtil;
-import eu.albina.util.HibernateUtil;
-import eu.albina.util.JsonUtil;
-import jakarta.persistence.EntityManager;
 
 /**
  * Controller for avalanche reports.
@@ -41,49 +45,54 @@ import jakarta.persistence.EntityManager;
  * @author Norbert Lanzanasto
  *
  */
+@Singleton
 public class AvalancheReportController {
 
 	private static final Logger logger = LoggerFactory.getLogger(AvalancheReportController.class);
 
-	private static AvalancheReportController instance = null;
+	@Inject
+	AvalancheReportRepository avalancheReportRepository;
 
-	/**
-	 * Private constructor.
-	 */
-	private AvalancheReportController() {
-	}
+	@Inject
+	UserRepository userRepository;
 
-	/**
-	 * Returns the {@code AvalancheReportController} object associated with the
-	 * current Java application.
-	 *
-	 * @return the {@code AvalancheReportController} object associated with the
-	 *         current Java application.
-	 */
-	public static AvalancheReportController getInstance() {
-		if (instance == null) {
-			instance = new AvalancheReportController();
+	@Inject
+	ObjectMapper objectMapper;
+
+	@Repository
+	public interface AvalancheReportRepository extends CrudRepository<AvalancheReport, String> {
+
+		@Join(value = "user", type = Join.Type.FETCH)
+		List<AvalancheReport> findByDateAndRegion(ZonedDateTime date, Region region);
+
+		default List<AvalancheReport> findByDateAndRegion(Instant date, Region region) {
+			return findByDateAndRegion(AlbinaUtil.getZonedDateTimeUtc(date), region);
 		}
-		return instance;
+
+		@Join(value = "user", type = Join.Type.FETCH)
+		List<AvalancheReport> findByDateBetweenAndRegion(ZonedDateTime startDate, ZonedDateTime endDate, Region region);
+
+		default List<AvalancheReport> findByDateBetweenAndRegion(Instant startDate, Instant endDate, Region region) {
+			return findByDateBetweenAndRegion(AlbinaUtil.getZonedDateTimeUtc(startDate), AlbinaUtil.getZonedDateTimeUtc(endDate), region);
+		}
+
+		AvalancheReport findFirstByStatusInOrderByDateDesc(Set<BulletinStatus> status);
+
 	}
 
 	/**
 	 * Return the actual status of the bulletins for every day in a given time
 	 * period for a given {@code region}.
 	 *
-	 * @param startDate
-	 *            the start date of the time period
-	 * @param endDate
-	 *            the end date of the time period
-	 * @param region
-	 *            the region of interest
+	 * @param startDate the start date of the time period
+	 * @param endDate   the end date of the time period
+	 * @param region    the region of interest
 	 * @return a map of all days within the time period and the actual status of the
-	 *         bulletins of this day
-	 * @throws AlbinaException
-	 *             if no {@code region} was defined
+	 * bulletins of this day
+	 * @throws AlbinaException if no {@code region} was defined
 	 */
 	public Map<Instant, BulletinStatus> getInternalStatus(Instant startDate, Instant endDate, Region region)
-			throws AlbinaException {
+		throws AlbinaException {
 
 		if (region == null)
 			throw new AlbinaException("No region defined!");
@@ -98,12 +107,10 @@ public class AvalancheReportController {
 	 * Return the actual status of the bulletins for a specific {@code date} for a
 	 * given {@code region} or null if no report was found.
 	 *
-	 * @param date
-	 *            the date of interest
-	 * @param region
-	 *            the region of interest
+	 * @param date   the date of interest
+	 * @param region the region of interest
 	 * @return the actual status of the bulletins of this day or null if no report
-	 *         was found
+	 * was found
 	 */
 	public BulletinStatus getInternalStatusForDay(Instant date, Region region) {
 		AvalancheReport report = getInternalReport(date, region);
@@ -119,20 +126,16 @@ public class AvalancheReportController {
 	 * returned ({@code republished} > {@code published} > {@code submitted} >
 	 * {@code draft} > {@code missing}).
 	 *
-	 * @param startDate
-	 *            the start date of the time period
-	 * @param endDate
-	 *            the end date of the time period
-	 * @param region
-	 *            the region of interest
+	 * @param startDate the start date of the time period
+	 * @param endDate   the end date of the time period
+	 * @param region    the region of interest
 	 * @return a map of all days within the time period and the official status of
-	 *         the bulletins of this day
-	 * @throws AlbinaException
-	 *             if no region was defined
+	 * the bulletins of this day
+	 * @throws AlbinaException if no region was defined
 	 */
 	public Map<Instant, BulletinStatus> getStatus(Instant startDate, Instant endDate, Region region)
-			throws AlbinaException {
-		Map<Instant, BulletinStatus> result = new HashMap<Instant, BulletinStatus>();
+		throws AlbinaException {
+		Map<Instant, BulletinStatus> result = new HashMap<>();
 
 		if (region == null)
 			throw new AlbinaException("No region defined!");
@@ -150,20 +153,16 @@ public class AvalancheReportController {
 	 * returned ({@code republished} > {@code published} > {@code submitted} >
 	 * {@code draft} > {@code missing}).
 	 *
-	 * @param startDate
-	 *            the start date of the time period
-	 * @param endDate
-	 *            the end date of the time period
-	 * @param regions
-	 *            the regions of interest
+	 * @param startDate the start date of the time period
+	 * @param endDate   the end date of the time period
+	 * @param regions   the regions of interest
 	 * @return a map of all days within the time period and the official status of
-	 *         the bulletins of this day
-	 * @throws AlbinaException
-	 *             if no region was defined
+	 * the bulletins of this day
+	 * @throws AlbinaException if no region was defined
 	 */
 	public Map<Instant, BulletinStatus> getStatus(Instant startDate, Instant endDate, List<Region> regions)
-			throws AlbinaException {
-		Map<Instant, BulletinStatus> result = new HashMap<Instant, BulletinStatus>();
+		throws AlbinaException {
+		Map<Instant, BulletinStatus> result = new HashMap<>();
 
 		if (regions == null || regions.isEmpty())
 			throw new AlbinaException("No region defined!");
@@ -187,15 +186,12 @@ public class AvalancheReportController {
 	 * period for a given {@code region}. For each day the status is only returned
 	 * if it is {@code republished} or {@code published}.
 	 *
-	 * @param startDate
-	 *            the start date of the time period
-	 * @param endDate
-	 *            the end date of the time period
-	 * @param region
-	 *            the region of interest
+	 * @param startDate the start date of the time period
+	 * @param endDate   the end date of the time period
+	 * @param region    the region of interest
 	 * @return a map of all days within the time period and the status of the
-	 *         bulletins of this day if it is {@code republished} or
-	 *         {@code published}
+	 * bulletins of this day if it is {@code republished} or
+	 * {@code published}
 	 */
 	public Map<Instant, AvalancheReport> getPublicationStatus(Instant startDate, Instant endDate, Region region) {
 
@@ -210,61 +206,29 @@ public class AvalancheReportController {
 	/**
 	 * Return all public reports for a specific time period and {@code region}.
 	 *
-	 * @param startDate
-	 *            start date if the time period
-	 * @param endDate
-	 *            end date of the time period
-	 * @param region
-	 *            the region of interest
+	 * @param startDate start date if the time period
+	 * @param endDate   end date of the time period
+	 * @param region    the region of interest
 	 * @return all public reports for a specific time period and {@code region}
 	 */
 	public Collection<AvalancheReport> getPublicReports(Instant startDate, Instant endDate, Region region) {
-		return HibernateUtil.getInstance().run(entityManager -> {
-			List<AvalancheReport> reports = new ArrayList<AvalancheReport>();
-			if (region != null && !Strings.isNullOrEmpty(region.getId())) {
-				reports = entityManager.createQuery(HibernateUtil.queryGetReportsForTimePeriodAndRegion, AvalancheReport.class)
-						.setParameter("startDate", AlbinaUtil.getZonedDateTimeUtc(startDate)).setParameter("endDate", AlbinaUtil.getZonedDateTimeUtc(endDate))
-						.setParameter("region", region).getResultList();
-
-				for (AvalancheReport avalancheReport : reports) {
-					initializeAndUnproxy(avalancheReport);
-					initializeAndUnproxy(avalancheReport.getUser());
-				}
-			}
-
-			Map<Instant, AvalancheReport> result = getHighestStatusMap(reports);
-
-			return result.values();
-		});
+		List<AvalancheReport> reports = avalancheReportRepository.findByDateBetweenAndRegion(startDate, endDate, region);
+		Map<Instant, AvalancheReport> result = getHighestStatusMap(reports);
+		return result.values();
 	}
 
 	/**
 	 * Return the public report for specific {@code date} and {@code region} or null
 	 * if no report was found.
 	 *
-	 * @param date
-	 *            the date of interest
-	 * @param region
-	 *            the region of interest
+	 * @param date   the date of interest
+	 * @param region the region of interest
 	 * @return the public report for specific {@code date} and {@code region} or
-	 *         null if not report was found
+	 * null if not report was found
 	 */
 	public AvalancheReport getPublicReport(Instant date, Region region) {
-		return HibernateUtil.getInstance().run(entityManager -> {
-			List<AvalancheReport> reports = new ArrayList<AvalancheReport>();
-			if (region != null && !Strings.isNullOrEmpty(region.getId())) {
-				reports = entityManager.createQuery(HibernateUtil.queryGetReportsForDayAndRegion, AvalancheReport.class)
-						.setParameter("date", AlbinaUtil.getZonedDateTimeUtc(date))
-						.setParameter("region", region).getResultList();
-
-				for (AvalancheReport avalancheReport : reports) {
-					initializeAndUnproxy(avalancheReport);
-					initializeAndUnproxy(avalancheReport.getUser());
-				}
-			}
-
-			return getHighestStatus(reports);
-		});
+		List<AvalancheReport> reports = avalancheReportRepository.findByDateAndRegion(date, region);
+		return getHighestStatus(reports);
 	}
 
 	private AvalancheReport getHighestStatus(List<AvalancheReport> reports) {
@@ -278,7 +242,7 @@ public class AvalancheReportController {
 				if (result.getStatus() == null)
 					result = avalancheReport;
 				else if (result.getStatus().comparePublicationStatus(avalancheReport.getStatus()) <= 0
-						&& result.getTimestamp().isBefore(avalancheReport.getTimestamp()))
+					&& result.getTimestamp().isBefore(avalancheReport.getTimestamp()))
 					result = avalancheReport;
 			}
 		}
@@ -286,7 +250,7 @@ public class AvalancheReportController {
 	}
 
 	private Map<Instant, AvalancheReport> getHighestStatusMap(List<AvalancheReport> reports) {
-		Map<Instant, AvalancheReport> result = new HashMap<Instant, AvalancheReport>();
+		Map<Instant, AvalancheReport> result = new HashMap<>();
 		for (AvalancheReport avalancheReport : reports)
 			if (result.containsKey(avalancheReport.getDate().toInstant())) {
 				if (avalancheReport.getStatus() == null)
@@ -294,9 +258,9 @@ public class AvalancheReportController {
 				if (result.get(avalancheReport.getDate().toInstant()).getStatus() == null)
 					result.put(avalancheReport.getDate().toInstant(), avalancheReport);
 				else if (result.get(avalancheReport.getDate().toInstant()).getStatus()
-						.comparePublicationStatus(avalancheReport.getStatus()) <= 0
-						&& result.get(avalancheReport.getDate().toInstant()).getTimestamp()
-								.isBefore(avalancheReport.getTimestamp()))
+					.comparePublicationStatus(avalancheReport.getStatus()) <= 0
+					&& result.get(avalancheReport.getDate().toInstant()).getTimestamp()
+					.isBefore(avalancheReport.getTimestamp()))
 					result.put(avalancheReport.getDate().toInstant(), avalancheReport);
 			} else
 				result.put(avalancheReport.getDate().toInstant(), avalancheReport);
@@ -306,74 +270,41 @@ public class AvalancheReportController {
 	/**
 	 * Return all most recent reports for a specific time period and {@code region}.
 	 *
-	 * @param startDate
-	 *            start date if the time period
-	 * @param endDate
-	 *            end date of the time period
-	 * @param region
-	 *            the region of interest
+	 * @param startDate start date if the time period
+	 * @param endDate   end date of the time period
+	 * @param region    the region of interest
 	 * @return all most recent reports for a specific time period and {@code region}
 	 */
 	private Collection<AvalancheReport> getInternalReports(Instant startDate, Instant endDate, Region region) {
-		return HibernateUtil.getInstance().run(entityManager -> {
-			Map<Instant, AvalancheReport> result = new HashMap<Instant, AvalancheReport>();
-			List<AvalancheReport> reports = new ArrayList<AvalancheReport>();
+		Map<Instant, AvalancheReport> result = new HashMap<>();
+		List<AvalancheReport> reports = avalancheReportRepository.findByDateBetweenAndRegion(startDate, endDate, region);
 
-			if (region != null && !Strings.isNullOrEmpty(region.getId())) {
-				reports = entityManager.createQuery(HibernateUtil.queryGetReportsForTimePeriodAndRegion, AvalancheReport.class)
-						.setParameter("startDate", AlbinaUtil.getZonedDateTimeUtc(startDate)).setParameter("endDate", AlbinaUtil.getZonedDateTimeUtc(endDate))
-						.setParameter("region", region).getResultList();
-			}
-
-			// select most recent report
-			for (AvalancheReport avalancheReport : reports) {
-				avalancheReport.setRegion(region);
-				if (result.containsKey(avalancheReport.getDate().toInstant())) {
-					if (result.get(avalancheReport.getDate().toInstant()).getTimestamp().isBefore(avalancheReport.getTimestamp()))
-						result.put(avalancheReport.getDate().toInstant(), avalancheReport);
-				} else
+		// select most recent report
+		for (AvalancheReport avalancheReport : reports) {
+			avalancheReport.setRegion(region);
+			if (result.containsKey(avalancheReport.getDate().toInstant())) {
+				if (result.get(avalancheReport.getDate().toInstant()).getTimestamp().isBefore(avalancheReport.getTimestamp()))
 					result.put(avalancheReport.getDate().toInstant(), avalancheReport);
-			}
+			} else
+				result.put(avalancheReport.getDate().toInstant(), avalancheReport);
+		}
 
-			return result.values();
-		});
+		return result.values();
 	}
 
 	/**
 	 * Returns the most recent report for specific {@code date} and {@code region}
 	 * or null if no report was found.
 	 *
-	 * @param date
-	 *            the date of interest
-	 * @param region
-	 *            the region of interest
+	 * @param date   the date of interest
+	 * @param region the region of interest
 	 * @return the most recent report for specific {@code date} and {@code region}
-	 *         or null if no report was found
+	 * or null if no report was found
 	 */
 	public AvalancheReport getInternalReport(Instant date, Region region) {
-		return HibernateUtil.getInstance().run(entityManager -> getInternalReport(date, region, entityManager));
-	}
-
-	private static AvalancheReport getInternalReport(Instant date, Region region, EntityManager entityManager) {
-		AvalancheReport result = null;
-		List<AvalancheReport> reports = new ArrayList<AvalancheReport>();
-
-		if (region != null && !Strings.isNullOrEmpty(region.getId())) {
-			reports = entityManager.createQuery(HibernateUtil.queryGetReportsForDayAndRegion, AvalancheReport.class)
-					.setParameter("date", AlbinaUtil.getZonedDateTimeUtc(date))
-					.setParameter("region", region).getResultList();
-		}
-
+		List<AvalancheReport> reports = avalancheReportRepository.findByDateAndRegion(date, region);
 		// select most recent report
-		for (AvalancheReport avalancheReport : reports) {
-			avalancheReport.setRegion(region);
-			if (result == null)
-				result = avalancheReport;
-			else if (result.getTimestamp().isBefore(avalancheReport.getTimestamp()))
-				result = avalancheReport;
-		}
-
-		return result;
+		return reports.stream().max(Comparator.comparing(AvalancheReport::getTimestamp)).orElse(null);
 	}
 
 	/**
@@ -385,17 +316,13 @@ public class AvalancheReportController {
 	 * {@code republished} to {@code updated}. A broacast message about the changes
 	 * is sent.
 	 *
-	 * @param avalancheBulletins
-	 *            the affected bulletins
-	 * @param date
-	 *            the start date of the report
-	 * @param region
-	 *            the region of the report
-	 * @param user
-	 *            the user who saves the report
+	 * @param avalancheBulletins the affected bulletins
+	 * @param date               the start date of the report
+	 * @param region             the region of the report
+	 * @param user               the user who saves the report
 	 */
-	public void saveReport(Map<String, AvalancheBulletin> avalancheBulletins, Instant date, Region region, User user, EntityManager entityManager) {
-		AvalancheReport latestReport = getInternalReport(date, region, entityManager);
+	public void saveReport(Map<String, AvalancheBulletin> avalancheBulletins, Instant date, Region region, User user) {
+		AvalancheReport latestReport = getInternalReport(date, region);
 		BulletinStatus latestStatus = latestReport == null ? null : latestReport.getStatus();
 		BulletinStatus newStatus = deriveStatus(avalancheBulletins, latestStatus);
 
@@ -408,13 +335,14 @@ public class AvalancheReportController {
 		avalancheReport.setUser(user);
 		avalancheReport.setDate(date.atZone(ZoneId.of("UTC")));
 		avalancheReport.setRegion(region);
-		Collection<AvalancheBulletin> bulletins = avalancheBulletins.values().stream().map(b -> b.withRegionFilter(region)).collect(Collectors.toList());
-		avalancheReport.setJsonString(JsonUtil.writeValueUsingJackson(bulletins, JsonUtil.Views.Internal.class));
+		Collection<AvalancheBulletin> bulletins = avalancheBulletins.values().stream().map(b -> b.withRegionFilter(region)).toList();
+		try {
+			avalancheReport.setJsonString(objectMapper.cloneWithViewClass(JsonUtil.Views.Internal.class).writeValueAsString(bulletins));
+		} catch (IOException e) {
+			throw new UncheckedIOException(e);
+		}
 
-		entityManager.persist(avalancheReport);
-
-		BulletinUpdate bulletinUpdate = new BulletinUpdate(region.getId(), date, avalancheReport.getStatus());
-		AvalancheBulletinUpdateEndpoint.broadcast(bulletinUpdate);
+		avalancheReportRepository.save(avalancheReport);
 
 		logger.info("Report for region {} saved by {}", region.getId(), user);
 	}
@@ -458,28 +386,26 @@ public class AvalancheReportController {
 	 * @param bulletins       the bulletins which are affected by the publication
 	 * @param startDate       the start date of the time period
 	 * @param region          the region that should be published
-	 * @param user            the user who publishes the report
+	 * @param username        the user who publishes the report
 	 * @param publicationDate the timestamp when the report was published
 	 * @return a list of the ids of the published reports
 	 * @throws AlbinaException if more than one report was found
 	 */
-	public AvalancheReport publishReport(List<AvalancheBulletin> bulletins, Instant startDate, Region region, User user,
+	public AvalancheReport publishReport(List<AvalancheBulletin> bulletins, Instant startDate, Region region, String username,
 										 Instant publicationDate) {
-		return HibernateUtil.getInstance().runTransaction(entityManager -> {
-			AvalancheReport report = getInternalReport(startDate, region);
+		User user = username != null ? userRepository.findById(username).orElseThrow() : null;
+		AvalancheReport report = getInternalReport(startDate, region);
 
-			BulletinUpdate bulletinUpdate = null;
-
-			AvalancheReport avalancheReport = new AvalancheReport();
-			avalancheReport.setTimestamp(publicationDate.atZone(ZoneId.of("UTC")));
-			avalancheReport.setUser(user);
-			avalancheReport.setDate(startDate.atZone(ZoneId.of("UTC")));
-			avalancheReport.setRegion(region);
-			if (report == null) {
-				avalancheReport.setStatus(BulletinStatus.missing);
-			} else {
-				avalancheReport.setMediaFileUploaded(report.isMediaFileUploaded());
-				switch (report.getStatus()) {
+		AvalancheReport avalancheReport = new AvalancheReport();
+		avalancheReport.setTimestamp(publicationDate.atZone(ZoneId.of("UTC")));
+		avalancheReport.setUser(user);
+		avalancheReport.setDate(startDate.atZone(ZoneId.of("UTC")));
+		avalancheReport.setRegion(region);
+		if (report == null) {
+			avalancheReport.setStatus(BulletinStatus.missing);
+		} else {
+			avalancheReport.setMediaFileUploaded(report.isMediaFileUploaded());
+			switch (report.getStatus()) {
 				case missing:
 					avalancheReport.setStatus(BulletinStatus.missing);
 					logger.warn("Bulletins have to be created first!");
@@ -510,20 +436,19 @@ public class AvalancheReportController {
 					break;
 				default:
 					break;
-				}
 			}
+		}
 
-			Collection<AvalancheBulletin> bulletins1 = bulletins.stream().map(b -> b.withRegionFilter(region)).collect(Collectors.toList());
-			avalancheReport.setJsonString(JsonUtil.writeValueUsingJackson(bulletins1, JsonUtil.Views.Internal.class));
+		Collection<AvalancheBulletin> bulletins1 = bulletins.stream().map(b -> b.withRegionFilter(region)).toList();
+		try {
+			avalancheReport.setJsonString(objectMapper.cloneWithViewClass(JsonUtil.Views.Internal.class).writeValueAsString(bulletins1));
+		} catch (IOException e) {
+			throw new UncheckedIOException(e);
+		}
 
-			entityManager.persist(avalancheReport);
-			bulletinUpdate = new BulletinUpdate(region.getId(), startDate, avalancheReport.getStatus());
-			AvalancheBulletinUpdateEndpoint.broadcast(bulletinUpdate);
-
-			logger.info("Report for region {} published by {}", region.getId(), user);
-
-			return avalancheReport;
-		});
+		avalancheReportRepository.save(avalancheReport);
+		logger.info("Report for region {} published by {}", region.getId(), user);
+		return avalancheReport;
 	}
 
 	/**
@@ -533,31 +458,24 @@ public class AvalancheReportController {
 	 * and set the user. If there was not report a new report with status
 	 * <code>missing</code> is created.
 	 *
-	 * @param bulletins
-	 *            the affected bulletins
-	 * @param startDate
-	 *            the start date of the time period
-	 * @param region
-	 *            the region that should be submitted
-	 * @param user
-	 *            the user who submits the report
+	 * @param bulletins the affected bulletins
+	 * @param startDate the start date of the time period
+	 * @param region    the region that should be submitted
+	 * @param user      the user who submits the report
 	 */
 	public void submitReport(List<AvalancheBulletin> bulletins, Instant startDate, Region region, User user) {
-		HibernateUtil.getInstance().runTransaction(entityManager -> {
-			AvalancheReport report = getInternalReport(startDate, region);
-			BulletinUpdate bulletinUpdate = null;
-
-			AvalancheReport avalancheReport = new AvalancheReport();
-			avalancheReport.setTimestamp(AlbinaUtil.getZonedDateTimeNowNoNanos());
-			avalancheReport.setUser(user);
-			avalancheReport.setDate(startDate.atZone(ZoneId.of("UTC")));
-			avalancheReport.setRegion(region);
-			if (report == null) {
-				avalancheReport.setStatus(BulletinStatus.missing);
-				logger.info("Status set to MISSING for region {}", region.getId());
-			} else {
-				avalancheReport.setMediaFileUploaded(report.isMediaFileUploaded());
-				switch (report.getStatus()) {
+		AvalancheReport report = getInternalReport(startDate, region);
+		AvalancheReport avalancheReport = new AvalancheReport();
+		avalancheReport.setTimestamp(AlbinaUtil.getZonedDateTimeNowNoNanos());
+		avalancheReport.setUser(user);
+		avalancheReport.setDate(startDate.atZone(ZoneId.of("UTC")));
+		avalancheReport.setRegion(region);
+		if (report == null) {
+			avalancheReport.setStatus(BulletinStatus.missing);
+			logger.info("Status set to MISSING for region {}", region.getId());
+		} else {
+			avalancheReport.setMediaFileUploaded(report.isMediaFileUploaded());
+			switch (report.getStatus()) {
 				case missing:
 					avalancheReport.setStatus(BulletinStatus.missing);
 					logger.warn("Bulletins have to be created first!");
@@ -571,7 +489,7 @@ public class AvalancheReportController {
 					logger.warn("Bulletins already submitted!");
 					break;
 				case published:
-				avalancheReport.setStatus(BulletinStatus.published);
+					avalancheReport.setStatus(BulletinStatus.published);
 					logger.warn("Bulletins already published!");
 					break;
 				case updated:
@@ -588,41 +506,33 @@ public class AvalancheReportController {
 					break;
 				default:
 					break;
-				}
 			}
+		}
 
-			// set json string after status is published/republished
-			Collection<AvalancheBulletin> bulletins1 = bulletins.stream().map(b -> b.withRegionFilter(region)).collect(Collectors.toList());
-			avalancheReport.setJsonString(JsonUtil.writeValueUsingJackson(bulletins1, JsonUtil.Views.Internal.class));
+		// set json string after status is published/republished
+		Collection<AvalancheBulletin> bulletins1 = bulletins.stream().map(b -> b.withRegionFilter(region)).toList();
+		try {
+			avalancheReport.setJsonString(objectMapper.cloneWithViewClass(JsonUtil.Views.Internal.class).writeValueAsString(bulletins1));
+		} catch (IOException e) {
+			throw new UncheckedIOException(e);
+		}
 
-			entityManager.persist(avalancheReport);
-			bulletinUpdate = new BulletinUpdate(region.getId(), startDate, avalancheReport.getStatus());
-
-			if (bulletinUpdate != null) {
-				AvalancheBulletinUpdateEndpoint.broadcast(bulletinUpdate);
-			}
-
-			logger.info("Report for region {} submitted by {}", region.getId(), user);
-
-			return null;
-		});
+		avalancheReportRepository.save(avalancheReport);
+		logger.info("Report for region {} submitted by {}", region.getId(), user);
 	}
 
 	/**
 	 * Return all bulletins in a given time period and for specific regions with
 	 * status {@code published} or {@code republished} (ordered by danger rating).
 	 *
-	 * @param date
-	 *            the start date of the bulletins
-	 * @param regions
-	 *            the regions of interest
+	 * @param date    the start date of the bulletins
+	 * @param regions the regions of interest
 	 * @return all published bulletins with the most recent version number
-	 * @throws AlbinaException
-	 *             if the report could not be loaded from the DB
+	 * @throws AlbinaException if the report could not be loaded from the DB
 	 */
 	public ArrayList<AvalancheBulletin> getPublishedBulletins(Instant date, List<Region> regions) {
 		int revision = 1;
-		Map<String, AvalancheBulletin> resultMap = new HashMap<String, AvalancheBulletin>();
+		Map<String, AvalancheBulletin> resultMap = new HashMap<>();
 
 		for (Region region : regions) {
 			// get bulletins for this region
@@ -630,7 +540,7 @@ public class AvalancheReportController {
 			if (report == null) {
 				continue;
 			}
-			List<AvalancheBulletin> publishedBulletinsForRegion = report.getPublishedBulletins();
+			List<AvalancheBulletin> publishedBulletinsForRegion = report.getPublishedBulletins(objectMapper);
 			for (AvalancheBulletin bulletin : publishedBulletinsForRegion) {
 				if (resultMap.containsKey(bulletin.getId())) {
 					boolean match = false;
@@ -663,7 +573,7 @@ public class AvalancheReportController {
 			}
 		}
 
-		ArrayList<AvalancheBulletin> bulletins = new ArrayList<AvalancheBulletin>(resultMap.values());
+		ArrayList<AvalancheBulletin> bulletins = new ArrayList<>(resultMap.values());
 		Collections.sort(bulletins);
 
 		return bulletins;
@@ -673,90 +583,53 @@ public class AvalancheReportController {
 	 * Return id of reports for a specific {@code date} and {@code regions} with
 	 * status {@code published} or {@code republished}.
 	 *
-	 * @param date
-	 *            the date of interest
-	 * @param regions
-	 *            the regions of interest
+	 * @param date    the date of interest
+	 * @param regions the regions of interest
 	 * @return id of reports for a specific time period and regions with status
-	 *         {@code published} or {@code republished}
+	 * {@code published} or {@code republished}
 	 */
 	public List<String> getPublishedReportIds(Instant date, List<Region> regions) {
 		return regions.stream()
 			.map(region -> getPublicReport(date, region))
 			.filter(report -> report.getStatus() == BulletinStatus.published || report.getStatus() == BulletinStatus.republished)
 			.map(AbstractPersistentObject::getId)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
-	/**
-	 * Initialize and unproxy fields of entity.
-	 *
-	 * @param entity
-	 *            the entity to initialize and unproxy
-	 * @return the entity
-	 */
-	@SuppressWarnings("unchecked")
-	private static <T> T initializeAndUnproxy(T entity) {
-		if (entity == null) {
-			throw new NullPointerException("Entity passed for initialization is null");
-		}
-
-		Hibernate.initialize(entity);
-		if (entity instanceof HibernateProxy) {
-			entity = (T) ((HibernateProxy) entity).getHibernateLazyInitializer().getImplementation();
-		}
-		return entity;
-	}
-
+	@Transactional
 	public void setAvalancheReportFlag(String avalancheReportId, BiConsumer<AvalancheReport, Boolean> flagSetter) {
 		if (avalancheReportId == null) {
 			return;
 		}
-		HibernateUtil.getInstance().runTransaction(entityManager -> {
-			AvalancheReport avalancheReport = entityManager.find(AvalancheReport.class, avalancheReportId);
-			flagSetter.accept(avalancheReport, true);
-			entityManager.flush();
-			return null;
-		});
+		AvalancheReport avalancheReport = avalancheReportRepository.findById(avalancheReportId).orElseThrow();
+		flagSetter.accept(avalancheReport, true);
+		avalancheReportRepository.save(avalancheReport);
 	}
 
+	@Transactional
 	public void setMediaFileFlag(Instant date, Region region) {
-		HibernateUtil.getInstance().runTransaction(entityManager -> {
-			AvalancheReport result = null;
-			List<AvalancheReport> reports = new ArrayList<AvalancheReport>();
+		AvalancheReport result = null;
+		List<AvalancheReport> reports = avalancheReportRepository.findByDateAndRegion(date, region);
 
-			if (region != null && !Strings.isNullOrEmpty(region.getId())) {
-				reports = entityManager.createQuery(HibernateUtil.queryGetReportsForDayAndRegion, AvalancheReport.class)
-						.setParameter("date", AlbinaUtil.getZonedDateTimeUtc(date))
-						.setParameter("region", region).getResultList();
-			}
+		// select most recent report
+		for (AvalancheReport avalancheReport : reports)
+			if (result == null)
+				result = avalancheReport;
+			else if (result.getTimestamp().isBefore(avalancheReport.getTimestamp()))
+				result = avalancheReport;
 
-			// select most recent report
-			for (AvalancheReport avalancheReport : reports)
-				if (result == null)
-					result = avalancheReport;
-				else if (result.getTimestamp().isBefore(avalancheReport.getTimestamp()))
-					result = avalancheReport;
-
-			if (result != null) {
-				result.setMediaFileUploaded(true);
-				entityManager.persist(result);
-				entityManager.flush();
-			}
-
-			return null;
-		});
+		if (result != null) {
+			result.setMediaFileUploaded(true);
+			avalancheReportRepository.save(result);
+		}
 	}
 
 	/**
 	 * Returns the date of the latest published bulletin.
 	 *
 	 * @return the date of the latest published bulletin
-	 * @throws HibernateException
-	 *             if no report was found
 	 */
 	public Instant getLatestDate() throws AlbinaException {
-		return HibernateUtil.getInstance().run(entityManager
-			-> entityManager.createQuery(HibernateUtil.queryGetLatestDate, AvalancheReport.class).setMaxResults(1).getSingleResult().getDate().toInstant());
+		return avalancheReportRepository.findFirstByStatusInOrderByDateDesc(EnumSet.of(BulletinStatus.published, BulletinStatus.republished)).getDate().toInstant();
 	}
 }
