@@ -1,7 +1,6 @@
 // SPDX-License-Identifier: AGPL-3.0-or-later
 package eu.albina.model.enumerations;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.ResourceBundle;
@@ -20,63 +19,34 @@ public enum Aspect {
 				.getString(name());
 	}
 
-	public static Aspect fromString(String text) {
-		if (text != null) {
-			return Arrays.stream(Aspect.values()).filter(type -> text.equalsIgnoreCase(type.toString())).findFirst().orElse(null);
-		}
-		return null;
-	}
-
 	public String toCaamlString() {
 		return "AspectRange_" + this.toLowerCaseString();
 	}
 
 	public String toString() {
-		switch (this) {
-		case N:
-			return "N";
-		case NE:
-			return "NE";
-		case E:
-			return "E";
-		case SE:
-			return "SE";
-		case S:
-			return "S";
-		case SW:
-			return "SW";
-		case W:
-			return "W";
-		case NW:
-			return "NW";
-
-		default:
-			return null;
-		}
+		return switch (this) {
+			case N -> "N";
+			case NE -> "NE";
+			case E -> "E";
+			case SE -> "SE";
+			case S -> "S";
+			case SW -> "SW";
+			case W -> "W";
+			case NW -> "NW";
+		};
 	}
 
 	public String toLowerCaseString() {
-		switch (this) {
-		case N:
-			return "n";
-		case NE:
-			return "ne";
-		case E:
-			return "e";
-		case SE:
-			return "se";
-		case S:
-			return "s";
-		case SW:
-			return "sw";
-		case W:
-			return "w";
-		case NW:
-			return "nw";
-
-		default:
-			return null;
-		}
+		return switch (this) {
+			case N -> "n";
+			case NE -> "ne";
+			case E -> "e";
+			case SE -> "se";
+			case S -> "s";
+			case SW -> "sw";
+			case W -> "w";
+			case NW -> "nw";
+		};
 	}
 
 	public static String getSymbolPath(Set<Aspect> aspects, boolean grayscale) {
@@ -91,26 +61,16 @@ public enum Aspect {
 	}
 
 	private static int bitmask(Aspect aspect) {
-		switch (aspect) {
-			case N:
-				return 0b10000000;
-			case NE:
-				return 0b01000000;
-			case E:
-				return 0b00100000;
-			case SE:
-				return 0b00010000;
-			case S:
-				return 0b00001000;
-			case SW:
-				return 0b00000100;
-			case W:
-				return 0b00000010;
-			case NW:
-				return 0b00000001;
-			default:
-				return 0;
-		}
+        return switch (aspect) {
+            case N -> 0b10000000;
+            case NE -> 0b01000000;
+            case E -> 0b00100000;
+            case SE -> 0b00010000;
+            case S -> 0b00001000;
+            case SW -> 0b00000100;
+            case W -> 0b00000010;
+            case NW -> 0b00000001;
+		};
 	}
 
 	public static List<Aspect> sortAspects(Set<Aspect> aspects) {
@@ -124,6 +84,6 @@ public enum Aspect {
 			return sorted;
 		}
 		Aspect middleAspect = Stream.of(Aspect.N, Aspect.S, Aspect.W, Aspect.E).filter(sorted.subList(1, sorted.size() - 1)::contains).findFirst().orElseThrow();
-		return List.of(sorted.get(0), middleAspect, sorted.get(sorted.size() - 1));
+		return List.of(sorted.getFirst(), middleAspect, sorted.getLast());
 	}
 }
