@@ -1,8 +1,6 @@
 // SPDX-License-Identifier: AGPL-3.0-or-later
 package eu.albina.util;
 
-import static eu.albina.RegionTestUtils.regionTyrol;
-
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -10,6 +8,10 @@ import java.nio.file.Path;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import eu.albina.AvalancheBulletinTestUtils;
+import eu.albina.RegionTestUtils;
+import io.micronaut.test.extensions.junit5.annotation.MicronautTest;
+import jakarta.inject.Inject;
 import org.caaml.v6.AvalancheBulletins;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Disabled;
@@ -22,14 +24,25 @@ import eu.albina.model.AvalancheBulletin;
 import eu.albina.model.AvalancheReport;
 import eu.albina.model.enumerations.LanguageCode;
 
+@MicronautTest
 class TextToSpeechTest {
 
-	private static void toCAAMLv6(String bulletinResource) throws Exception {
+	@Inject
+	AvalancheBulletinTestUtils avalancheBulletinTestUtils;
+
+	@Inject
+	RegionTestUtils regionTestUtils;
+
+	@Inject
+	TextToSpeech textToSpeech;
+
+	private void toCAAMLv6(String bulletinResource) throws Exception {
 		URL resource = Resources.getResource(bulletinResource);
-		List<AvalancheBulletin> bulletins = AvalancheBulletin.readBulletinsUsingJackson(resource);
-		AvalancheReport avalancheReport = AvalancheReport.of(bulletins, regionTyrol, null);
+		List<AvalancheBulletin> bulletins = avalancheBulletinTestUtils.readBulletins(resource);
+		AvalancheReport avalancheReport = AvalancheReport.of(bulletins, regionTestUtils.regionTyrol(), null);
 		for (LanguageCode lang : avalancheReport.getRegion().getTTSLanguages()) {
 			AvalancheBulletins caaml = Caaml6.toCAAML(avalancheReport, lang);
+			caaml.getBulletins().forEach(textToSpeech::createAudioFileRequest);
 			String ssml = caaml.getBulletins().stream()
 				.map(bulletin -> new TextToSpeech.ScriptEngine(bulletin).createScript())
 				.collect(Collectors.joining(String.format("%n%n")));
@@ -75,11 +88,11 @@ class TextToSpeechTest {
 	public void test20231201mp3() throws Exception {
 		// GOOGLE_APPLICATION_CREDENTIALS
 		URL resource = Resources.getResource("2023-12-01.json");
-		List<AvalancheBulletin> bulletins = AvalancheBulletin.readBulletinsUsingJackson(resource);
+		List<AvalancheBulletin> bulletins = avalancheBulletinTestUtils.readBulletins(resource);
 		AvalancheReport avalancheReport = AvalancheReport.of(bulletins, null, null);
 		AvalancheBulletins caaml = Caaml6.toCAAML(avalancheReport, LanguageCode.de);
-		org.caaml.v6.AvalancheBulletin bulletin = caaml.getBulletins().get(0);
-		byte[] mp3 = TextToSpeech.createAudioFile(bulletin);
+		org.caaml.v6.AvalancheBulletin bulletin = caaml.getBulletins().getFirst();
+		byte[] mp3 = textToSpeech.createAudioFile(bulletin);
 		Path path = Path.of(bulletin.getBulletinID() + ".mp3");
 		Files.write(path, mp3);
 	}
